// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`query() inner query: query-http 1`] = `"RETURN $bind__3"`;

exports[`query() inner query: bindings-http 1`] = `
{
  "bind__3": RecordId {
    "_id": "world",
    "_table": Table {
      "_name": "hello",
      [Symbol(surrealdb.Table)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
    [Symbol(surrealdb.RecordId)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`query() inner query: query-ws 1`] = `"RETURN $bind__4"`;

exports[`query() inner query: bindings-ws 1`] = `
{
  "bind__4": RecordId {
    "_id": "world",
    "_table": Table {
      "_name": "hello",
      [Symbol(surrealdb.Table)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
    [Symbol(surrealdb.RecordId)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;

exports[`query() inner query: query-mem 1`] = `"RETURN $bind__3"`;

exports[`query() inner query: bindings-mem 1`] = `
{
  "bind__3": RecordId {
    "_id": "world",
    "_table": Table {
      "_name": "hello",
      [Symbol(surrealdb.Table)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
    [Symbol(surrealdb.RecordId)]: true,
    [Symbol(surrealdb.Value)]: true,
  },
}
`;
